--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/StyleAlternativ.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/StyleAlternativ.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background: #ffffff;
-    color: black;
+    background: white;
+    color:black;
     font-size: 1.1em;
     line-height: 1.5;
     text-align: center;
@@ -14,16 +14,16 @@ Navigation bar
 
 .topnav {
     overflow: hidden;
-    background-color: #ffffff;
+    background-color: white;
 }
 
 
 .menu-icon{
 
-    width: 35px;
-    height: 5px;
-    background-color: #ffffff;
-    margin: 6px 0;
+    width: 1.75em;
+    height: 0.25em;
+    background-color: white;
+    margin: 0.3em 0;
     background-position: center;
 
 }
@@ -33,15 +33,15 @@ Navigation bar
     display: block;
     color: black;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0.7em 0.8em;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 1em;
 
 }
 
 
 .active {
-    background-color: #ffffff;
+    background-color: white;
     color: black;
 }
 
@@ -56,14 +56,14 @@ Navigation bar
 
 
 .dropdown .dropbtn {
-    font-size: 17px;
+    font-size: 1em;
     border: none;
     outline: none;
     color: black;
-    padding: 14px 16px;
-    background-color: #ffffff;
+    padding: 0.7em 0.8em;
+    background-color: white;
     font-family: inherit;
-    margin-top: 3px;
+    margin-top: 0.15em;
 }
 
 
@@ -73,28 +73,28 @@ Navigation bar
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #ffffff;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: white;
+    min-width: 2em;
+    box-shadow: 0em 0.4em 0.8em 0em rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
     float: none;
     color: black;
-    padding: 12px 16px;
+    padding: 0.6em 0.8em;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #ffffff;
+    background-color: white;
     color: black;
 }
 
 .dropdown-content a:hover {
-    background-color: #ffffff;
+    background-color: white;
     color: black;
 }
 
@@ -163,30 +163,30 @@ p {
 
 .btn {
     display: inline-block;
-    background: #ffffff;
+    background: white;
     color: black;
     text-decoration: none;
     padding: 1em 2em;
-    border: 1px solid #666;
+    border: 0.05em solid #666;
     margin: 0.5em 0;
 }
 
 .btn:hover {
-    background: #ffffff;
+    background: white;
     color: black;
 }
 
 /* Header Showcase */
 
-#showcase {
-    min-height: 450px;
+#showcase #showcase2 #showcase3{
+    min-height: 21.5em;
     color: black;
     text-align: center;
 }
 
 #logo{
-    width: 120px;
-    height: 100px;
+    width: 6em;
+    height: 5em;
     background-position: center;
     background-repeat: no-repeat;
     display: inline-block;
@@ -194,31 +194,57 @@ p {
 
 #showcase .bg-image {
     position: absolute;
-    background: grey
+    background: white
     url("../img/Imges/Gurken.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 450px;
+    height: 22.5em;
     z-index: -1;
-    opacity: 0.1;
+    opacity: 0.4;
 }
 
 #showcase h1 {
-    padding-top: 100px;
+    padding-top: 3em;
     padding-bottom: 0;
 }
 
-#showcase .content-wrap,
+#showcase .content-wrap, #showcase2 #showcase3
 #section-a .content-wrap {
     padding: 0 1.5em;
 }
 
+
+#showcase3 .bg-image3 {
+    position: absolute;
+    background: url("../img/Images/2222.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background: white;
+    width: 100%;
+    height: 22.5em;
+    z-index: -1;
+    opacity: 0.4;
+}
+#showcase2 .bg-image2 {
+    position: absolute;
+    background: url("../img/Images/1111.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 22.5em;
+    z-index: -1;
+    opacity: 0.4;
+}
+
+
 /* Section A */
 
 #section-a {
-    background: #ffffff;
+    background: white;
     color: black;
     padding-bottom: 2em;
 }
@@ -237,7 +263,7 @@ p {
 
 #section-b li {
     margin-bottom: 1em;
-    background: #ffffff;
+    background: white;
     color: black;
 }
 
@@ -248,7 +274,7 @@ p {
 /* Section C */
 
 #section-c {
-    background: #ffffff;
+    background: white;
     color: black;
     padding: 2em;
 }
@@ -261,87 +287,109 @@ p {
 }
 
 #section-d .box:first-child {
-    background: #ffffff;
+    background: white;
 }
 #section-d .box {
-    background: #ffffff;
+    background: white;
 }
 /* Footer */
-/* Footer */
 .footer-distributed{
-    background-color: #ffffff;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    text-align: left;
-    font: normal 16px sans-serif;
+	background-color: white;
+	box-shadow: 0 0.05em 0.05em 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: normal 0.8em sans-serif;
 }
 
 .footer-distributed .footer-left p{
-    color:  black;
-    font-size: 14px;
-    margin: 0;
+	color:  black;
+	font-size: 0.7em;
+	margin: 0;
 }
 
 /* Footer links */
 
 .footer-distributed p.footer-links{
-    font-size:18px;
-    font-weight: bold;
-    color:  black;
-    margin: 0 0 10px;
-    padding: 0;
+	font-size:0.9em;
+	font-weight: bold;
+	color:  black;
+	margin: 0 0 0.5em;
+	padding: 0;
 }
 
 .footer-distributed p.footer-links a{
-    display:inline-block;
-    line-height: 1.8;
-    text-decoration: none;
-    color:  black;
+	display:inline-block;
+	line-height: 1.8;
+	text-decoration: none;
+	color:  black;
 }
 
 .footer-distributed .footer-right{
-    float: right;
-    margin-top: 6px;
-    max-width: 180px;
+	float: right;
+	margin-top: 0.3em;
+	max-width: 20em;
 }
 
 .footer-distributed .footer-right a{
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    background-color: #ffffff;
-    border-radius: 2px;
+	display: inline-block;
+	width: 1.75em;
+	height: 1.75em;
+	background-color:  #33383b;
+	border-radius: 0.1em;
 
-    font-size: 20px;
-    color: black;
-    text-align: center;
-    line-height: 35px;
+	font-size: 1em;
+	color: black;
+	text-align: center;
+	line-height: 1.75em;
 
-    margin-left: 3px;
+	margin-left: 0.15em;
 }
 .cc{
     color: black;
 }
 
+.fa:hover {
+    opacity: 0.7;
+
+}
+
+.fa-facebook{
+    color: #3c5a96;
+
+}
+.fa-twitter{
+    color: #59adeb;
+}
+
+.fa-linkedin{
+    color: #127cb3;
+}
+.fa-github{
+    color: #7c0f7b;
+}
+
+
+
 /* If you don't want the footer to be responsive, remove these media queries */
 
 @media (max-width: 600px) {
 
-    .footer-distributed .footer-left,
-    .footer-distributed .footer-right{
-        text-align: center;
-    }
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-right{
+		text-align: center;
+	}
 
-    .footer-distributed .footer-right{
-        float: none;
-        margin: 0 auto 20px;
-    }
+	.footer-distributed .footer-right{
+		float: none;
+		margin: 0 auto 1em;
+	}
 
-    .footer-distributed .footer-left p.footer-links{
-        line-height: 1.8;
-    }
+	.footer-distributed .footer-left p.footer-links{
+		line-height: 1.8;
+	}
 }
+
 /* Media Queries */
 
 @media (min-width: 700px) {
@@ -354,9 +402,9 @@ p {
         columns: 1;
     }
 
-    #section-a .content-text p {
-        padding-top: 0;
-    }
+     #section-a .content-text p {
+         padding-top: 0;
+     }
 
     .content-wrap,
     #section-b ul {
@@ -386,7 +434,7 @@ p {
 
 
 .dropdown{
-    margin-top: -12px;
+    margin-top: -0.82em;
 }
 
 
@@ -398,32 +446,32 @@ p {
 
 input[type=text],  textarea {
     width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    padding: 0.6em;
+    border: 0.05em solid #ccc;
+    border-radius: 0.2em;
     box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
+    margin-top: 0.3em;
+    margin-bottom: 0.8em;
     resize: vertical;
 }
 
 input[type=submit] {
-    background-color: #ffffff;
+    background-color: white;
     color: black;
-    padding: 12px 20px;
+    padding: 0.6em 1em;
     border: none;
-    border-radius: 4px;
+    border-radius: 0.2em;
     cursor: pointer;
 }
 
 input[type=submit]:hover {
-    background-color: #ffffff;
+    background-color: white;
 }
 
 .container {
-    border-radius: 5px;
-    background-color: #ffffff;
-    padding: 20px;
+    border-radius: 0.25em;
+    background-color: white;
+    padding: 1em;
 }
 
 
@@ -440,7 +488,7 @@ input[type=submit]:hover {
 
 .header {
     text-align: center;
-    padding: 32px;
+    padding: 1.6em;
 }
 
 .row {
@@ -448,7 +496,7 @@ input[type=submit]:hover {
     display: flex;
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
-    padding: 0 4px;
+    padding: 0 0.2em;
 }
 
 /* Create four equal columns that sits next to each other */
@@ -456,11 +504,11 @@ input[type=submit]:hover {
     -ms-flex: 25%; /* IE10 */
     flex: 25%;
     max-width: 25%;
-    padding: 0 4px;
+    padding: 0 0.2em;
 }
 
 .column img {
-    margin-top: 8px;
+    margin-top: 0.4em;
     vertical-align: middle;
 }
 
@@ -488,7 +536,7 @@ input[type=submit]:hover {
 
 .slider{
     overflow: hidden;
-    height: 450px;
+    height: 21.5em;
 }
 
 .slider figure div{
@@ -585,7 +633,7 @@ input[type=submit]:hover {
 
 /************************        Section-c        ****************/
 #section-c {
-    background: #ffffff;
+    background: white;
     color: black;
     padding: 2em;
 }
@@ -595,7 +643,7 @@ input[type=submit]:hover {
 .videoWrapper {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 */
-    padding-top: 30px;
+    padding-top: 1.5em;
     height: 0;
 }
 .videoWrapper iframe {
@@ -612,14 +660,14 @@ input[type=submit]:hover {
 
 
 .Wrapper1{
-    padding: 10px;
+    padding: 0.5em;
 }
 .Wrapper1 > div{
-    background-color: #ffffff;
+    background-color: white;
     padding: 1em;
 }
 .Wrapper1 > div:nth-child(odd){
-    background-color: #ffffff;
+    background-color: white;
 }
 .Wrapper1 {
     display: grid;
@@ -627,7 +675,7 @@ input[type=submit]:hover {
     grid-template-columns: 1fr 1fr   ;
     grid-gap: 1em;
 
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(5em, auto);
 
 }
 
@@ -641,7 +689,7 @@ input[type=submit]:hover {
         grid-template-columns: 1fr    ;
         grid-gap: 1em;
 
-        grid-auto-rows: minmax(100px, auto);
+        grid-auto-rows: minmax(5em, auto);
 
     }
 
@@ -649,11 +697,11 @@ input[type=submit]:hover {
 }
 
 table,th,td {
-    border : 2px solid black;
+    border : 0.1em solid black;
     border-collapse: collapse;
 }
 th,td {
-    padding: 5px;
+    padding: 0.25em;
     color: black;
 }
 
@@ -661,13 +709,14 @@ th,td {
 
 
 
+
 #Triptable{
     text-align: center;
-    background-color: #ffffff;
+    background-color: white;
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 1px solid #ddd;
+    border: 0.05em solid #ddd;
     overflow-y: auto;
     margin: 0 0 1em;
 }
@@ -678,8 +727,8 @@ th,td {
     text-align: center;
     font-size: 2.1em;
 
-    background-color: #ffffff;
-    border: 3px solid #ddd;
+    background-color: white;
+    border: 0.15em solid black;
 }
 
 
@@ -688,7 +737,7 @@ th,td {
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 1px solid #ffffff;
+    border: 0.05em solid black;
     overflow-y: auto;
     margin: 0 0 1em;
 }
@@ -696,40 +745,49 @@ th,td {
 
 
 
-tr:nth-child(even){background-color: #ffffff
-}
+tr:nth-child(even){background-color: darkseagreen}
+
 
 
 #showcase3 .bg-image3 {
     position: absolute;
-    background: #ffffff url("../img/Images/2222.png") no-repeat center;
+    background: white;
+    /*url("../img/Images/2222.png");*/
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 450px;
+    height: 22.5em;
     z-index: -1;
     opacity: 0.4;
+    background-image: url(../img/images/2222.png);
 }
 #showcase2 .bg-image2 {
     position: absolute;
-    background: #ffffff url("../img/Images/1111.png") no-repeat center;
+    background: white;
+    /*url("../img/Images/1111.png");*/
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 450px;
+    height: 22.5em;
     z-index: -1;
     opacity: 0.4;
+    background-image: url(../img/images/1111.png);
 }
 
+ 
 
 
 .Wrapper1{
-    padding: 10px;
+    padding: 0.5em;
 }
 .Wrapper1 > div{
-    background-color: #ffffff;
+    background-color: white;
     padding: 1em;
 }
 .Wrapper1 > div:nth-child(odd){
-    background-color: #ffffff;
+    background-color: white;
 }
 .Wrapper1 {
     display: grid;
@@ -737,7 +795,7 @@ tr:nth-child(even){background-color: #ffffff
     grid-template-columns: 1fr 1fr   ;
     grid-gap: 1em;
 
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(5em, auto);
 
 }
 @media screen and (max-width: 750px){
@@ -747,7 +805,7 @@ tr:nth-child(even){background-color: #ffffff
         grid-template-columns: 1fr    ;
         grid-gap: 1em;
 
-        grid-auto-rows: minmax(100px, auto);
+        grid-auto-rows: minmax(5em, auto);
 
 
     }
@@ -759,7 +817,7 @@ tr:nth-child(even){background-color: #ffffff
 
 .boxe4:hover, .boxe3:hover, .boxe2:hover ,.boxe1:hover{
     opacity: 0.3;
-    background: #ffffff;
+    background: white;
     color: black;
 }
 
@@ -780,28 +838,28 @@ tr:nth-child(even){background-color: #ffffff
 
 }
 .socicons-list li {
-    margin: 20px 10px;
+    margin: 1em 0.5em;
 }
 .socicons-list li a {
     text-decoration: none;
-    padding: 20px;
-    font-size: 20px;
+    padding: 1em;
+    font-size: 1em;
     border-radius: 50%;
     color: black;
-    background-color: #ffffff;
+    background-color: white;
     transition: all ease-in-out 150ms;
 }
 .socicons-list li a:hover {
-    text-shadow: 0 5px 10px #212121;
+    text-shadow: 0 0.2em 0.5em white;
 }
 .socicons-list li:nth-child(1) a {
-    background-color: #ffffff;
+    background-color: white;
 }
 .socicons-list li:nth-child(2) a {
-    background-color: #ffffff;
+    background-color: white;
 }
 .socicons-list li:nth-child(3) a {
-    background-color: #ffffff;
+    background-color: white;
 }
 
 
@@ -809,16 +867,16 @@ tr:nth-child(even){background-color: #ffffff
 /***************** Assigment 2C **************/
 
 ul.breadcrumb {
-    padding: 10px 16px;
+    padding: 0.5em 0.8em;
     list-style: none;
-    background-color: #ffffff;
+    background-color: white;
 }
 ul.breadcrumb li {
     display: inline;
-    font-size: 18px;
+    font-size: 0.9em;
 }
 ul.breadcrumb li+li:before {
-    padding: 8px;
+    padding: 0.4em;
     color: black;
     content: "/\00a0";
 }
@@ -830,7 +888,7 @@ ul.breadcrumb li a:hover {
     color: black;
     text-decoration: underline;
 }
-
 #wikiid{
     color: black;
 }
+
