--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -335,7 +335,7 @@ p {
 	display: inline-block;
 	width: 1.75em;
 	height: 1.75em;
-	background-color:  #33383b;
+	background-color:  white;
 	border-radius: 0.1em;
 
 	font-size: 1em;
