--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Alternative.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Alternative.css
@@ -335,7 +335,7 @@ p {
 	display: inline-block;
 	width: 1.75em;
 	height: 1.75em;
-	background-color:  #33383b;
+	background-color:  white;
 	border-radius: 0.1em;
 
 	font-size: 1em;
@@ -388,6 +388,11 @@ p {
 	.footer-distributed .footer-left p.footer-links{
 		line-height: 1.8;
 	}
+}
+
+.hide-me{
+    display: none; 
+    color: black
 }
 
 /* Media Queries */
